--- a/_config.yml
+++ b/_config.yml
@@ -90,5 +90,9 @@ friends: [
     {
         title: "Haer Labotiy",
         href: "http://openg-qkmb.github.io"
+    },
+    {
+        title: "Mr.Haer",
+        href: "http://mrhaer.github.io"
     }
 ]
