--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings | 网站设置
-title: Haer Labotiy bev HSSR Govera
-SEOTitle: 哈儿实验室和哈儿国政府 - Haer Labotiy bev Haer Ufekke Govera
+title: 哈儿实验室和哈儿国政府 Haer Labotiy bev HSSR Govera
+SEOTitle: 哈儿实验室
 header-img: img/home-bg-he.png
 email: radiumvs@foxmail.com
 description: "Tet veebat veda Haer Sovet Sotsialism Respublik Govera mu ihf d uayk."
