--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ github_username: hssrgov
 permalink: pretty
 paginate: 10
 # 转换时排除某些文件夹或文件。被排除的文件或文件夹的路径是相对于网站源码目录的，源码目录以外不受影响。
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","access"]
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
 Regeneration: true    # 允许文件修改时自动重新生成网站。
