--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/home-bg-he.png
 email: radiumvs@foxmail.com
 description: "Tet veebat veda Haer Sovet Sotsialism Respublik Govera mu ihf d uayk."
 keyword: "Haer, Haer Labotiy, Haer SSR, HSSR, HSSR Govera, haer, OpenG-qkmb, 哈儿, 哈儿实验室, 哈儿国, 哈儿苏维埃社会主义共和国"
-url: "http://hssrgov.github.io"          # your host, for absolute URL
+url: "https://hssrgov.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/hssrgov/hssrgov.github.io" #code repository | 代码仓库
 
