--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,15 +1,15 @@
 {
-  "name": "RainbomSea",
-  "short_name": "RainbomSea",
-  "description": "就算这样, 也要笑着去努力啊",
+  "name": "Hux Blog",
+  "short_name": "Hux Blog",
+  "description": "About an engineer & designer who loves web.",
   "icons": [{
-    "src": "icons/pwa_icon_64.ico",
-    "sizes": "64x64",
-    "type": "image/ico"
-  }, {
-    "src": "icons/pwa_icon_128.ico",
+    "src": "icons/128.png",
     "sizes": "128x128",
-    "type": "image/ico"
+    "type": "image/png"
+  }, {
+    "src": "icons/512.png",
+    "sizes": "512x512",
+    "type": "image/png"
   }],
   "background_color": "#fff",
   "theme_color": "#000",
