--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "HSSR Govera",
-    "title": "HSSR Govera",
-    "author": "BY <radiumvs@foxmail.com>",
-    "version": "1.1.0",
+    "name": "haerlab",
+    "title": "哈儿实验室",
+    "author": "Лаборатория Хаера <radiumvs@foxmail.com>",
+    "version": "1.8.2",
     "homepage": "http://hssrgov.github.io",
     "repository": {
         "type": "git",
@@ -11,18 +11,15 @@
     "bugs": "https://github.com/hssrgov/hssrgov.github.io/issues",
     "devDependencies": {
         "grunt": ">=1.3.0",
-        "grunt-contrib-less": "~0.11.4",
-        "grunt-contrib-watch": "~0.6.1",
         "grunt-banner": "~0.2.3",
-        "grunt-contrib-uglify": "~0.5.1"
+        "grunt-contrib-less": "^2.0.0",
+        "grunt-contrib-uglify": "^4.0.1",
+        "grunt-contrib-watch": "^1.1.0"
     },
     "scripts": {
-        "preview": "cd _site; python -m SimpleHTTPServer 8020",
-        "py3view": "cd _site; python3 -m http.server 8020",
-        "watch"  : "grunt watch & npm run preview & jekyll serve -w",
-        "py3wa"  : "grunt watch & npm run py3view & jekyll serve -w",
-        "boil"   : "git push boilerplate boilerplate:master",
-        "push"   : "git push origin master --tag",
-        "cafe"   : "git co gitcafe-pages; git merge master; git push gitcafe gitcafe-pages:gitcafe-pages --tag; git co master;"
+        "start": "bundle exec jekyll serve -w -l --host 0.0.0.0",
+        "dev": "grunt watch & npm run start",
+        "boil": "git push boilerplate boilerplate:master",
+        "push": "git push origin master --tag"
     }
 }
