--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Hux Blog",
-  "short_name": "Hux Blog",
-  "description": "About an engineer & designer who loves web.",
+  "name": "哈儿实验室",
+  "short_name": "哈儿实验室",
+  "description": "这是哈儿实验室的官方网站。",
   "icons": [{
     "src": "icons/128.png",
     "sizes": "128x128",
@@ -11,8 +11,8 @@
     "sizes": "512x512",
     "type": "image/png"
   }],
-  "background_color": "#fff",
-  "theme_color": "#000",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
