--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -3,11 +3,11 @@
   "short_name": "哈儿实验室",
   "description": "这是哈儿实验室的官方网站。",
   "icons": [{
-    "src": "icons/128.png",
+    "src": "pwa/icons/128.png",
     "sizes": "128x128",
     "type": "image/png"
   }, {
-    "src": "icons/512.png",
+    "src": "pwa/icons/512.png",
     "sizes": "512x512",
     "type": "image/png"
   }],
