添加一条消息
rt

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "哈儿实验室",
     "author": "Лаборатория Хаера <radiumvs@foxmail.com>",
     "version": "1.8.2",
-    "homepage": "http://hssrgov.github.io",
+    "homepage": "https://khayer.cn/",
     "repository": {
         "type": "git",
         "url": "https://github.com/hssrgov/hssrgov.github.io"
