计划的修改
rt

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 哈儿实验室部长会议
-SEOTitle: 哈儿实验室部长会议
+title: 哈儿实验室
+SEOTitle: 哈儿实验室
 header-img: img/home-bg.jpg
 # email: radiumvs@foxmail.com
 description: "哈儿实验室的官方网站。Это официальный сайт Лаборатории Хаера. Гэта афіцыйны сайт Лабараторыі Хаера. Це офіційний сайт Лабораторії Хаера."
