--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ RSS: false
 highlighter: rouge
 permalink: pretty
 paginate: 15
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md","_deleted"]
 anchorjs: true						  # if you want to customize anchor. check out line:181 of `post.html`
 # If you have timezone issue (e.g. #68) in China, uncomment to use this:
 #timezone: CN  
